Fixed some Errors